<resources>
    <string name="google_client_id">1039998415869-a4a91ilosq9svm7odgvpm2g4uejp7n9j.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1462069321270859</string>
    <string name="fb_login_protocol_scheme">fb1462069321270859</string>
    <string name="facebook_client_token">c74f7842b7a60da0626e2661c058b901</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="app_name">Tribe Watch</string>
    <string name="connected">connected</string>
    <string name="connected_status">Connected</string>
    <string name="disconnected_status">Disconnected</string>
    <string name="default_avatar">FireBoltt 083</string>
    <string name="steps">Steps</string>
    <string name="calories">Calories</string>
    <string name="goal">Goal</string>
    <string name="distance">Distance</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="temperature">Temperature</string>

    <string name="met.">MET.</string>
    <string name="sleep">Sleep</string>
    <string name="hr">Hr</string>
    <string name="HR">HR</string>
    <string name="oxygen">Blood Oxygen</string>
    <string name="bpm">Bpm</string>
    <string name="title_home">HOME</string>
    <string name="title_tribe">TRIBE</string>
    <string name="title_device">DEVICE</string>
    <string name="title_profile">PROFILE</string>
    <string name="profile">Profile</string>
    <string name="my_devices">My Devices</string>
    <string name="reconnect">Reconnect</string>
    <string name="email">Email</string>
    <string name="signature">Signature</string>
    <string name="mailbox">Your Mailbox</string>

    <string name="personal_info">Personal Information</string>
    <string name="system_settings">System Settings</string>
    <string name="help">Questions &amp; Help</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="hr_trend">Heart Rate Trend</string>
    <string name="oxygen_trend">Blood Oxygen Trend</string>
    <string name="tempr_trend">Temperature Trend</string>
    <string name="sleep_record">Sleep Record</string>
    <string name="bp">Bp</string>
    <string name="mmhg">MmHg</string>
    <string name="blood_trend">Blood pressure trend</string>
    <string name="tribe">Tribe</string>

    <string name="tribe_desc">A successful fitness app group fosters an environment of encouragement, accountability, and positive reinforcement for members to achieve their fitness goals.</string>

    <string name="days">Days</string>
    <string name="months">Months</string>
    <string name="weeks">Weeks</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>

    <string name="header_pulling">Pulling</string>
    <string name="header_refreshing">Refreshing</string>
    <string name="header_loading">Loading</string>
    <string name="header_release">Released</string>
    <string name="header_finish">Updated finished</string>
    <string name="header_failed">Failed</string>
    <string name="header_secondary">Secondary</string>
    <string name="header_update">\'Last update\' M-d HH:mm</string>

    <string name="lowest_value">Lowest value</string>
    <string name="average_value">Average value</string>
    <string name="highest_value">Highest value</string>
    <string name="average">Average</string>
    <string name="enter_bio">Enter bio</string>
    <string name="please_enter_email">Please enter your email</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_password">Enter your password</string>
    <string name="click_enter">Click enter...</string>

    <string name="hint_spinner">-Select-</string>

    <string name="deep_sleep">Deep Sleep</string>
    <string name="light_sleep">Light Sleep</string>
    <string name="wide_awake">Wide Awake</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="user_agreement">User Agreement</string>
    <string name="blood_pressure_range">Blood pressure range</string>
    <string name="data_share">Data Sharing</string>
    <string name="versionName">Version: 1.0.1</string>

    <string name="unit_settings">Unit Settings</string>
    <string name="imperial_unit">Imperial Unit</string>
    <string name="metric_unit">Metric Unit</string>
    <string name="tempr_unit">Temperature Unit</string>

    <string name="cancel">Cancel</string>
    <string name="sure">Done</string>
    <string name="tips_title">Tips</string>
    <string name="google_map_key">AIzaSyDjDSFh4fIjakS6TDu3tpkHeVWMeF72NDY</string>
    <string name="map_id">3f39d80104495bc0</string>

    <string name="scan_device_info_put_complete_code">Please enter the complete pairing code</string>
    <string name="scan_device_info_put_error">Wrong code input, please input again!</string>
    <string name="scan_device_blu_not_open">Bluetooth not on</string>
    <string name="scan_device_binding">Binding</string>
    <string name="scan_device_open_set">Please turn on Bluetooth for device connection</string>
    <string name="scan_device_set">Set</string>
    <string name="no_chart_data">No heart rate data available</string>
    <string name="no_oxygen_data">No blood oxygen data available</string>
    <string name="no_blood_data">No blood pressure data available</string>
    <string name="no_sleep_data">No sleep data available</string>
    <string name="no_met_data">No MET. data available</string>
    <string name="no_tempr_data">No temperature data available</string>
    <string name="permisson_location_open">Open</string>
    <string name="permisson_location_title">Location access is not turned on</string>
    <string name="permisson_location_tips">Outdoor sports require authorized location information permissions</string>
    <string name="scan_device_info_put_code">Input Pin code</string>
    <string name="sdk_not_available">Bluetooth is not available, please check your phone.</string>
    <string name="love_life_signature">Love Sports, Love life~</string>
    <string name="not_setting">Not setting</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="login_continue">Login to continue</string>
    <string name="password">Password</string>
    <string name="birthday">Date Of Birth</string>
    <string name="feedback_comment">Feedback your question or comments</string>
    <string name="name">Name</string>
    <string name="nick_name">Nick Name</string>
    <string name="login">Log in</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="mailto_hint">For any questions or feedback, please send us an email at support@tribesmartwatch.com</string>
    <string name="mailto">Mail to support@tribesmartwatch.com</string>
    <string name="logout">Log Out</string>
    <string name="add_device">Add Device</string>
    <string name="sign">Sign up</string>
    <string name="tempr_f">°F</string>
    <string name="tempr_c">°C</string>
    <string name="km">km</string>
    <string name="miles">miles</string>
    <string name="pounds">Pounds</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>

    <string name="ft">Ft</string>
    <string name="in">in</string>

    <string name="forgot_pwd">Forgot password?</string>
    <string name="or">or</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="no_account">Don’t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_signup">SignupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sign_continue">Sign Up to continue</string>

    <string name="has_account">Already have an account?</string>
    <string name="signin">Login</string>

    <string name="email_invalid">Please input valid email.</string>
    <string name="pwd_invalid">Please input valid password.</string>
    <string name="name_invalid">Please input valid name.</string>
    <string name="what_met">What is MET ?</string>
    <string name="body_weight">Body Weight</string>
    <string name="cumulative_met">Cumulative\nthis week</string>
    <string name="check_your_email">Reset password instructions has sent to your email, please check your email</string>

    <string name="email_not_exist">Email does not exist</string>
    <string name="reset_failed">Reset Failed</string>
    <string name="reset_password">Reset Password</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>

    <string name="met_desc">MET (Metabolic Equivalent of Energy) refers to the energy metabolism equivalent, a standard indicator for expressing various activities\' relative energy metabolism level based on the energy consumption during quiet and sitting. For example, one minute of training per kilogram of body weight consumes 3.5 ml of oxygen, and the intensity of this exercise is 1MET. The activity intensity of 1MET is only slightly higher than the basal metabolism of healthy adults, which is equivalent to the metabolic level of healthy adults when they are sitting quietly.</string>
    <string name="create_tribe">Create a Tribe</string>
    <string name="join_tribe">Join Tribe</string>
    <string name="members">Members</string>
    <string name="edit_tribe">Edit Tribe</string>
    <string name="verification_code">Tribe Verification Code</string>
    <string name="tribe_name">Tribe Name</string>
    <string name="tribe_continue">Continue</string>
    <string name="tribe_add">Add</string>
    <string name="tribe_delete">Delete Tribe</string>
    <string name="tribe_leave">Leave Tribe</string>
    <string name="skip">Skip</string>
    <string name="enter_valid_tribe">Please enter valid tribe name</string>
    <string name="enter_tribe_code">Please enter valid verification code</string>
    <string name="code_sent">Verification code has been sent</string>
    <string name="code_fail_sent">Failed to send verification code</string>
    <string name="tribe_settings">Tribe Settings</string>
    <string name="tribe_created">Tribe created by</string>
</resources>