<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mine.SystemSettingsActivity">
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:id="@+id/base_title_back"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_navigation_back" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/system_settings"
            android:textSize="16dp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/settings_share" />
        <TextView
            android:id="@+id/tv_share"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/data_share"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:textColor="@color/dark"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/arrow_right" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_unit"
            android:layout_width="match_parent"
            android:text="@string/unit_settings"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:textColor="@color/dark"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="43dp"
            android:id="@+id/iv_check_unit1"
            android:layout_gravity="center_vertical"
            android:src="@drawable/simple_check" />
        <TextView
            android:id="@+id/tv_imperial"
            android:layout_width="wrap_content"
            android:layout_marginTop="43dp"
            android:layout_height="24dp"
            android:text="@string/imperial_unit"
            android:layout_marginStart="29dp"
            android:textSize="16sp"
            android:textColor="@color/dark"
            android:textStyle="normal"
            android:gravity="center_vertical|left"/>
        <View
            android:layout_width="1dp"
            android:id="@+id/v_center1"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent"/>
        <ImageView
            android:id="@+id/iv_check_unit2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="43dp"
            android:layout_alignStart="@+id/v_center1"
            android:layout_marginStart="14dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/simple_uncheck" />
        <TextView
            android:id="@+id/tv_metric"
            android:layout_width="wrap_content"
            android:layout_marginTop="43dp"
            android:layout_height="24dp"
            android:layout_toRightOf="@id/iv_check_unit2"
            android:text="@string/metric_unit"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            android:textColor="@color/dark"
            android:textStyle="normal"
            android:gravity="center_vertical|left"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_tempr"
            android:layout_width="match_parent"
            android:text="@string/tempr_unit"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:textColor="@color/dark"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="43dp"
            android:id="@+id/iv_check_tempr1"
            android:layout_gravity="center_vertical"
            android:src="@drawable/simple_check" />
        <TextView
            android:id="@+id/tv_f"
            android:layout_width="wrap_content"
            android:layout_marginTop="43dp"
            android:layout_height="24dp"
            android:text="@string/tempr_f"
            android:layout_marginStart="29dp"
            android:textSize="16sp"
            android:textColor="@color/dark"
            android:textStyle="normal"
            android:gravity="center_vertical|left"/>
        <View
            android:layout_width="1dp"
            android:id="@+id/v_center2"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent"/>
        <ImageView
            android:id="@+id/iv_check_tempr2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="43dp"
            android:layout_alignStart="@+id/v_center2"
            android:layout_marginStart="14dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/simple_uncheck" />
        <TextView
            android:id="@+id/tv_c"
            android:layout_width="wrap_content"
            android:layout_marginTop="43dp"
            android:layout_height="24dp"
            android:layout_toRightOf="@id/iv_check_tempr2"
            android:text="@string/tempr_c"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            android:textColor="@color/dark"
            android:textStyle="normal"
            android:gravity="center_vertical|left"/>
    </RelativeLayout>

</LinearLayout>