<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mine.FeedbackActivity">
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:id="@+id/base_title_back"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_navigation_back" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/feedback"
            android:textSize="16dp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sl_scroll"
        android:layout_marginTop="28dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="20dp"
                android:autoSizeMaxTextSize="30dp"
                android:autoSizeTextType="uniform"
                android:gravity="center_vertical|left"
                android:text="@string/mailbox"
                android:textColor="@color/dark"
                android:textSize="16sp"
                android:textStyle="bold" />
            <LinearLayout
                android:id="@+id/rl_email"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/email_corner_shape"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv_email"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="14dp"
                    android:src="@drawable/feedback_mail" />
                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:gravity="center_vertical|left"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:autoSizeMaxTextSize="30dp"
                android:autoSizeTextType="uniform"
                android:gravity="center_vertical|left"
                android:text="@string/feedback_comment"
                android:textColor="@color/dark"
                android:textSize="16sp"
                android:textStyle="bold" />
            <LinearLayout
                android:id="@+id/rl_comment"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/comment_corner_shape"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/et_comment"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="match_parent"
                    android:hint="@string/click_enter"
                    android:background="@null"
                    android:gravity="center_vertical|left"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/rl_sign"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginBottom="36dp"
        android:layout_alignBottom="@+id/sl_scroll"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp">
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autoSizeMaxTextSize="30dp"
            android:gravity="center"
            android:text="@string/send"
            android:background="@drawable/sign_shape"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>