<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mine.AboutActivity">
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:id="@+id/base_title_back"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_navigation_back" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/about"
            android:textSize="16dp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/iv_sport_bg"
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:layout_marginTop="2dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/about_sport"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/ll_privacy"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/mine_user" />
        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/privacy_policy"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:textColor="@color/dark"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/arrow_right" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/line"
        android:layout_alignParentBottom="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/ll_terms"
        android:layout_height="64dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/about_policy" />
        <TextView
            android:id="@+id/tv_user"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/user_agreement"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:textColor="@color/dark"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"/>
        <ImageView
            android:id="@+id/iv_secure"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/arrow_right" />
    </LinearLayout>

    <TextView
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:textSize="15sp"
        android:textColor="@color/gray"
        android:text="@string/versionName">
    </TextView>

</LinearLayout>